--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.23.0"
+    "sequelize": "^6.23.0",
+    "tedious": "^16.1.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
